  *  - Added LEDs_ToggleLEDs() function to several board LED drivers which were missing it (thanks to Andrei Krainev)
  *  - Fixed SET FEATURE and CLEAR FEATURE control requests directed at an unconfigured endpoint causing request timeouts
  *  - Fixed incorrect signature reported in the CDC class bootloader for the ATMEGA32U2
  *
  *  \section Sec_ChangeLog100807 Version 100807
  *  <b>New:</b>
  *  - Added new ADC_DisableChannel() function (thanks to Mich Davis)
  *  - Added new VTARGET_REF_VOLTS and VTARGET_SCALE_FACTOR compile time defines to the AVRISP-MKII programmer project to set
  *    the VTARGET reference voltage and scale factor
  *  - Added new pgm_read_ptr() macro to Common.h for reading of pointers out of flash memory space
  *  - Added new SWAPENDIAN_16() and SWAPENDIAN_32() macros to Common.h for statically initialized variables at compile time
  *  - Added new Drivers/USB/LowLevel/Device.c file to house Device mode specific functions that are more complicated than simple macros
  *  - Added new AVRStudio 4 project files for all library demos, projects and bootloaders
  *  - Added ability to set the serial baud rate via the user's terminal in the XPLAINBridge project
  *  - Added new LUFA module variables for the different source modules in the core library makefile to simplify project makefiles
  *  - Added start of a new Test and Measurement class demo (thanks to Peter Lawrence)
  *  - Added new SPI_ORDER_* data order masks to the SPI peripheral driver
  *  - Added support to the AVRISP-MKII project for ISP speeds slower than 125KHz via a new software SPI driver
  *  - Added support for the new button/LED on the latest model USBTINY-MKII
  *
  *  <b>Changed:</b>
  *  - The RingBuff library code has been replaced in the XPLAINBridge, Benito and USBtoSerial projects with an ultra lightweight
  *    ring buffer to help improve the reliability of the projects