@@ -56,6 +56,7 @@
   *  - Added LEDs_ToggleLEDs() function to several board LED drivers which were missing it (thanks to Andrei Krainev)
   *  - Fixed SET FEATURE and CLEAR FEATURE control requests directed at an unconfigured endpoint causing request timeouts
   *  - Fixed incorrect signature reported in the CDC class bootloader for the ATMEGA32U2
+  *  - Fixed USB_Host_ClearPipeStall() incorrectly determining the endpoint direction from the currently selected pipe
   *
   *  \section Sec_ChangeLog100807 Version 100807
   *  <b>New:</b>
